--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@typescript-eslint/parser": "^5.0.1",
+    "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "mime-types": "^2.1.35",
     "next": "14.2.5",
     "pg": "^8.12.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "xss": "^1.0.15",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
