--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+
+    "noImplicitAny": true, //setting stricter Typescript rules
+    "strictNullChecks": true, //same here
+    "strictFunctionTypes": true, //same here
     "incremental": true,
     "plugins": [
       {
