--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
+    "uuid": "^10.0.0",
     "xss": "^1.0.15",
     "zod": "^3.23.8"
   },
@@ -29,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
