--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.5.4",
     "mime-types": "^2.1.35",
     "next": "14.2.5",
     "pg": "^8.12.0",
