--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.5.4",
     "mime-types": "^2.1.35",
     "next": "14.2.5",
+    "next-auth": "5.0.0-beta.21",
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
@@ -28,6 +29,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
