--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/pg-adapter": "^1.5.0",
     "@heroicons/react": "^2.1.5",
+    "@lucia-auth/adapter-postgresql": "^3.1.2",
     "@typescript-eslint/parser": "^5.0.1",
     "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.9.0",
@@ -18,9 +20,9 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.5.4",
+    "lucia": "^3.2.0",
     "mime-types": "^2.1.35",
     "next": "14.2.5",
-    "next-auth": "5.0.0-beta.21",
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
