--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/parser": "^5.0.1",
     "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.9.0",
+    "arctic": "^1.9.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
@@ -27,6 +28,7 @@
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^10.0.0",
+    "uuidv4": "^6.2.13",
     "xss": "^1.0.15",
     "zod": "^3.23.8"
   },
