--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.5.4",
     "lucia": "^3.2.0",
     "mime-types": "^2.1.35",
+    "mongodb": "^6.11.0",
     "next": "14.2.5",
     "pg": "^8.12.0",
     "react": "^18",
